# pga-toolbox

./: .gitignore  MATH.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: multistart_benchmark.py  quadratic_demo.py  visual_abstract.py
notes/: BATCHED_SPG_DESIGN.md
pga_toolbox/: __init__.py  line_search.py  pga.py  projections.py  spg.py  spg_batched.py
tests/: conftest.py  test_cuda_specific.py  test_line_search.py  test_pga.py  test_projections.py  test_spg.py  test_spg_batched.py
