[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pga-toolbox"
version = "0.3.0"
description = "Projected gradient ascent/descent for complex-valued (Wirtinger) and real parameters, with fixed-step, Armijo backtracking line search, and Spectral Projected Gradient (SPG) variants."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Tadashi Wadayama", email = "wadayama@nitech.ac.jp" },
]
keywords = [
    "projected-gradient",
    "line-search",
    "armijo",
    "wirtinger",
    "complex-optimization",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pga_toolbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
